# Computer-Graphics-Assignments

Common/Installs/lib/: libGLEW.so.2.1.0
Common/Installs/lib/cmake/glew/: glew-targets.cmake
Common/Installs/lib/pkgconfig/: glew.pc
Common/freeglut-3.2.2/: DVA338_CMAKE_TRACE.txt
Common/glew-2.1.0/cmakebuild/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
Common/glew-2.1.0/lib/: libGLEW.so.2.1.0
DVA338_Lab1/: CMakeLists.txt  GeometryFurShader.txt  README.md  algebra.cpp  algebra.h  camera.cpp  camera.h  fragmentShaderSmooth.txt  fsFur.txt  main.cpp  mesh.cpp  mesh.h  shaders.cpp  shaders.h  vertexShaderFlat.txt  vertexShaderSmooth.txt  vsFur.txt
DVA338_Lab1/Lab1_setup_NON_WINDOWS_ONLY/: install_prereqs_NON_WINDOWS.sh  pyt_install_prereqs_win.py
DVA338_Lab1/test/: CMakeLists.txt  camera_tests.h  math_tests.h  test_runner.cpp  test_runner.h  testutils.cpp  testutils.h
DVA338_Lab1/test/prebuilds/Release/: camera_tests.lib  math_tests.lib
DVA338_Lab3/: CMakeLists.txt  Camera.h  Image.h  Light.h  Main.cpp  Ray.h  Sphere.cpp  Sphere.h  Surface.cpp  Surface.h  Triangle.cpp  Triangle.h  TriangleLight.h  Vec3.h
